[package]
name = "crypto-market-maker"
version = "0.1.0"
edition = "2021"
authors = ["Victor Assis <victorluisgassis@gmail.com>"]
description = "A cryptocurrency market maker written in Rust for learning purposes"
license = "MIT"
repository = "https://github.com/victorlga/crypto-market-maker"
keywords = ["crypto", "trading", "market-maker", "rust"]
categories = ["cryptocurrency", "finance"]

[dependencies]
tokio = { version = "1.40", features = ["full"] } # Async runtime with all features
tokio-tungstenite = "0.23" # WebSocket client for tokio
reqwest = { version = "0.12", features = ["json"] } # HTTP client with JSON support
serde = { version = "1.0", features = ["derive"] } # Serialization framework
serde_json = "1.0" # JSON parsing
hmac = "0.12" # HMAC for API request signing
sha2 = "0.10" # SHA-256 for API request signing
rust_decimal = "1.36" # Decimal arithmetic for financial calculations
log = "0.4" # Logging framework
env_logger = "0.11" # Environment-based logging configuration
chrono = "0.4" # Date and time handling
anyhow = "1.0" # Simplified error handling
binance = { version = "0.29", optional = true } # Optional Binance API client

[features]
binance = ["dep:binance"] # Feature to enable Binance client

[dev-dependencies]
tokio-test = "0.4" # Testing async code
mockito = "1.5" # Mocking HTTP servers for tests

[profile.dev]
opt-level = 1 # Slight optimization for faster debug builds